chore: undo subcases sorting reversal in query
Down the line we expect the sorting to be ascending.

--- a/app/components/subcases/side-nav.hbs
+++ b/app/components/subcases/side-nav.hbs
@@ -18,7 +18,7 @@
   </Auk::Navbar>
     <div class="auk-scroll-wrapper__body auk-scroll-wrapper__body--vertical">
       <ul>
-        {{#each @subcases as |subcase index|}}
+        {{#each (reverse @subcases) as |subcase index|}}
           <Subcases::SideNav::Subcase
             @subcase={{subcase}}
             @selected={{false}}
