--- a/app/components/subcase/description-panel.hbs
+++ b/app/components/subcase/description-panel.hbs
@@ -1,11 +1,11 @@
 {{#if this.isEditing}}
-  <Subcase::SubcaseDescriptionPanel::SubcaseDescriptionEdit
+  <Subcase::DescriptionPanel::Edit
     @subcase={{@subcase}}
     @onCancel={{this.cancelEditing}}
     @onSave={{this.stopEditing}}
   />
 {{else}}
-  <Subcase::SubcaseDescriptionPanel::SubcaseDescriptionView
+  <Subcase::DescriptionPanel::View
     @subcase={{@subcase}}
     @onClickEdit={{this.startEditing}}
   />
