--- a/app/components/subcase/description-panel/edit.hbs
+++ b/app/components/subcase/description-panel/edit.hbs
@@ -51,9 +51,7 @@
             as |Group|
           >
             {{#each this.agendaItemTypes as |type|}}
-              <Group.Radio
-                @value={{type}}
-              >
+              <Group.Radio @value={{type}}>
                 {{type.label}}
               </Group.Radio>
             {{/each}}
@@ -73,10 +71,7 @@
       </AuFormRow>
       <AuFormRow>
         <Auk::Label>{{t "subcase-name"}}</Auk::Label>
-        <AuInput
-          @width="block"
-          @value={{mut this.subcaseName}}
-        />
+        <AuInput @width="block" @value={{mut this.subcaseName}} />
       </AuFormRow>
     </div>
   </Auk::Panel::Body>
@@ -84,10 +79,7 @@
     <Auk::Toolbar @auto={{true}}>
       <Auk::Toolbar::Group @position="left">
         <Auk::Toolbar::Item>
-          <AuButton
-            @skin="naked"
-            {{on "click" @onCancel}}
-          >
+          <AuButton @skin="naked" {{on "click" @onCancel}}>
             {{t "cancel"}}
           </AuButton>
         </Auk::Toolbar::Item>
