KAS-4496 change confirm button to primary skin

--- a/app/components/agenda/agenda-overview.hbs
+++ b/app/components/agenda/agenda-overview.hbs
@@ -3,6 +3,7 @@
     <ChangesAlert
       @message={{t "editing-agenda-overview"}}
       @buttonText={{t "apply-order"}}
+      @skin="primary"
       @onConfirm={{this.save}}
       @onCancel={{this.onCancel}}
     />
