KAS-4529 WIP test fixes bulk commit

--- a/app/components/cases/cases-header.hbs
+++ b/app/components/cases/cases-header.hbs
@@ -11,6 +11,7 @@
       <Group.Item class="auk-o-flex">
         {{#if @nameSearchText}}
           <AuButton
+            data-test-cases-header-clear-filter
             @skin="naked"
             @icon="undo"
             @hideText={{true}}
@@ -20,6 +21,7 @@
           </AuButton>
         {{/if}}
         <AuInput
+          data-test-cases-header-filter-input
           @width="block"
           @icon="search"
           value={{@nameSearchText}}
@@ -31,6 +33,7 @@
       {{#if (user-may "manage-cases")}}
         <Group.Item>
           <AuButton
+            data-test-cases-header-add-case
             @skin="primary"
             @icon="plus"
             {{on "click" (toggle "isOpenNewCaseAddSubcaseModal" this)}}
