--- a/app/components/documents/linked-documents-panel.hbs
+++ b/app/components/documents/linked-documents-panel.hbs
@@ -23,6 +23,7 @@
     {{#if (user-may "manage-documents")}}
     <Auk::Panel::Footer>
       <AuButton
+        data-test-linked-documents-panel-add
         @skin="naked"
         @icon="plus"
         class="au-u-padding-left-none"
