--- a/app/components/subcases/side-nav/subcase.hbs
+++ b/app/components/subcases/side-nav/subcase.hbs
@@ -1,5 +1,6 @@
 <li class="auk-sidebar__item auk-sidebar__item--styled {{if @selected "auk-sidebar__item--active"}}">
   <LinkTo 
+    data-test-subcase-side-nav-subcase
     @route="cases.case.subcases.subcase"
     @model={{@subcase.id}}
   >
@@ -11,7 +12,7 @@
     <div class="auk-sidebar__sublabel au-u-margin-top-none">
       {{t "last-edited-on"}} {{datetime @subcase.modified}}
     </div>
-    <div class="au-u-margin-top-tiny">
+    <div data-test-subcase-side-nav-decision class="au-u-margin-top-tiny">
       <Decision::DecisionResultPill
         @decisionResultCode={{this.decisionResultCode}}
       />
