--- a/app/components/subcase/subcase-description-panel/subcase-description-edit.hbs
+++ b/app/components/subcase/subcase-description-panel/subcase-description-edit.hbs
@@ -38,6 +38,7 @@
         <Auk::Label for="subcase-confidential">
           {{t "limited-access"}}</Auk::Label>
         <AuToggleSwitch
+          data-test-subcase-description-edit-confidential
           id="subcase-confidential"
           @checked={{@subcase.confidential}}
         />
@@ -46,6 +47,7 @@
         <Auk::Label id="short-title-subcase">
           {{t "name-subcase"}}</Auk::Label>
         <Textarea
+          data-test-subcase-description-edit-short-title
           aria-labelledby="short-title-subcase"
           rows="2"
           class="auk-textarea"
@@ -56,6 +58,7 @@
         <Auk::Label id="title-subcase">
           {{t "title-subcase"}}</Auk::Label>
         <Textarea
+          data-test-subcase-description-edit-title
           aria-labelledby="title-subcase"
           rows="4"
           class="auk-textarea"
@@ -65,6 +68,7 @@
       <AuFormRow>
         <Auk::Label>{{t "subcase-type-dropdown"}}</Auk::Label>
         <Utils::ModelSelector
+          data-test-subcase-description-edit-procedure-step
           @modelName="subcase-type"
           @searchField="label"
           @sortField="label"
@@ -75,7 +79,9 @@
       </AuFormRow>
       <AuFormRow>
         <Auk::Label>{{t "subcase-name"}}</Auk::Label>
+        {{! TODO KAS-4529 modelSelector + edit field like new subcase form?}}
         <AuInput
+          data-test-subcase-description-edit-procedure-name
           @width="block"
           @value={{mut this.subcaseName}}
         />
