--- a/app/templates/cases/case/subcases/subcase.hbs
+++ b/app/templates/cases/case/subcases/subcase.hbs
@@ -8,7 +8,6 @@
 
 <Subcases::SubcasesOverviewHeader
   @decisionmakingFlow={{@model.decisionmakingFlow}}
-  @onSaveCase={{this.saveCase}}
 />
 <div class="auk-panel-layout">
   {{#if @model.subcases.length}}
@@ -19,7 +18,7 @@
     </div>
   {{/if}}
   <div class="auk-panel-layout__main-content au-u-flex au-u-flex--column">
-    <div class="auk-scroll-wrapper">
+    <div class="auk-scroll-wrapper" id="subcases-wrapper">
       <div class="auk-u-bg-alt">
         <Subcases::SubcaseHeader
           @subcase={{@model.subcase}}
