KAS-4577 Fix 'require-context-role' linting errors

--- a/app/components/agenda/agenda-header/agenda-version-actions.hbs
+++ b/app/components/agenda/agenda-header/agenda-version-actions.hbs
@@ -1,3 +1,4 @@
+{{!-- template-lint-disable require-context-role --}}
 <AuDropdown
   data-test-agenda-version-actions-options-dropdown={{true}}
   @skin="primary"
@@ -50,6 +51,7 @@
   </AuButton>
   {{/if}}
 </AuDropdown>
+{{!-- template-lint-enable require-context-role --}}
 
 {{! new agenda actions with single pop-up for confirmation }}
 {{#if this.showConfirmForApprovingAgenda}}
