--- a/app/components/documents/document-card.hbs
+++ b/app/components/documents/document-card.hbs
@@ -188,6 +188,7 @@
             <Group.Item
               class="auk-o-flex auk-o-flex--vertical-center"
             >
+              {{!-- template-lint-disable require-context-role --}}
               <AuDropdown
                 data-test-document-card-actions={{true}}
                 @icon="three-dots"
@@ -261,6 +262,7 @@
                   </AuButton>
                 {{/if}}
               </AuDropdown>
+              {{!-- template-lint-enable require-context-role --}}
             </Group.Item>
           {{/if}}
         </Toolbar.Group>
