--- a/app/components/versions-dropdown.hbs
+++ b/app/components/versions-dropdown.hbs
@@ -1,3 +1,4 @@
+{{!-- template-lint-disable require-context-role --}}
 <AuDropdown
   @title={{this.labelForVersion this.selectedVersion}}
   @alignment="left"
@@ -22,3 +23,4 @@
     </AuButton>
   {{/each}}
 </AuDropdown>
+{{!-- template-lint-enable require-context-role --}}
