--- a/app/components/agenda/agendaitem/agendaitem-controls.hbs
+++ b/app/components/agenda/agendaitem/agendaitem-controls.hbs
@@ -1,5 +1,6 @@
 {{#if this.hasDropdownOptions}}
   {{#if (or this.isDeletable this.areDecisionActionsEnabled this.canSendToVP)}}
+    {{!-- template-lint-disable require-context-role --}}
     <AuDropdown
       data-test-agendaitem-controls-actions={{true}}
       @skin="secondary"
@@ -70,6 +71,7 @@
         </AuButton>
       {{/if}}
     </AuDropdown>
+    {{!-- template-lint-enable require-context-role --}}
   {{else}}
     <Auk::Loader />
   {{/if}}
