--- a/app/templates/settings/organizations/index.hbs
+++ b/app/templates/settings/organizations/index.hbs
@@ -96,6 +96,7 @@
         </td>
         <td data-test-route-settings-organizations-row-actions class="auk-u-text-align--right">
           <div class="auk-o-flex auk-o-flex--justify-end">
+            {{!-- template-lint-disable require-context-role --}}
             <AuDropdown
               data-test-route-settings-organizations-row-actions-dropdown
               @skin="naked"
@@ -124,6 +125,7 @@
                 </AuButton>
               {{/if}}
             </AuDropdown>
+            {{!-- template-lint-enable require-context-role --}}
             <AuLink
               data-test-route-settings-organizations-detail
               @skin="button-naked"
