--- a/app/templates/settings/users/index.hbs
+++ b/app/templates/settings/users/index.hbs
@@ -171,6 +171,7 @@
         </td>
         <td data-test-route-settings-users-row-actions class="auk-u-text-align--right">
           <div class="auk-o-flex auk-o-flex--justify-end">
+            {{!-- template-lint-disable require-context-role --}}
             <AuDropdown
               data-test-route-settings-users-row-actions-dropdown
               @skin="naked"
@@ -220,6 +221,7 @@
                 </AuButton>
               {{/if}}
             </AuDropdown>
+            {{!-- template-lint-enable require-context-role --}}
             <AuLink
               data-test-button-user-detail
               @skin="button-naked"
