KAS-4577 Fix 'no-redundant-fn' linting errors

--- a/app/components/documents/batch-details/batch-editing-row.hbs
+++ b/app/components/documents/batch-details/batch-editing-row.hbs
@@ -29,7 +29,7 @@
       <AuToggleSwitch
         @skin="primary"
         @label={{t "present-for-signing"}}
-        @onChange={{fn this.setMarkedForSignature}}
+        @onChange={{this.setMarkedForSignature}}
         @disabled={{or this.isDisabled this.isSignMarkingDisabled @agendaitemIsRetracted}}
       />
     </td>
