--- a/app/components/documents/batch-details/document-details-row.hbs
+++ b/app/components/documents/batch-details/document-details-row.hbs
@@ -56,7 +56,7 @@
             @skin="primary"
             @label={{t "present-for-signing"}}
             @checked={{@row.markedForSignature}}
-            @onChange={{fn @row.setMarkedForSignature}}
+            @onChange={{@row.setMarkedForSignature}}
             @disabled={{@agendaitemIsRetracted}}
           />
       {{/if}}
