--- a/app/components/cases/subcases/proposable-agendas-modal.hbs
+++ b/app/components/cases/subcases/proposable-agendas-modal.hbs
@@ -35,6 +35,7 @@
             </thead>
             <tbody class="auk-table--clickable-rows">
               {{#each this.agendas as |agenda|}}
+                {{! template-lint-disable no-invalid-interactive }}
                 <tr data-test-proposable-agendas-modal-agenda-row {{on "click" (fn this.selectAgenda agenda)}}>
                   <td class="auk-table__col--1">
                     <AuRadio
@@ -54,6 +55,7 @@
                     {{agenda.createdFor.kind.label}}
                   </td>
                 </tr>
+                {{! template-lint-enable no-invalid-interactive }}
               {{/each}}
             </tbody>
           </table>
